# bookforge

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  tmp_lintlog.txt
.pytest_tmp/test_generate_outline_includes0/: outline_prompt.txt
.pytest_tmp/test_load_registry0/: registry.json
.pytest_tmp/test_load_registry_missing_ver0/: registry.json
resources/: initial_concept.md  prompt_registry.json  steel man.md
schemas/: book.schema.json  error_v1.schema.json  item_registry.schema.json  lint_report.schema.json  outline.schema.json  outline_location_registry.schema.json  outline_pipeline_report.schema.json  outline_transition_hints.schema.json  plot_devices.schema.json  scene_card.schema.json  state.schema.json  state_patch.schema.json
scripts/: validate_prompt_composition.py  validate_prompt_composition_controls.py
tests/: test_appearance_attire.py  test_author_index.py  test_budgeter.py  test_character_invariants_remove.py  test_character_state_paths.py  test_config.py  test_continuity_pack.py  test_durable_apply.py  test_durable_state.py  test_lint_helpers.py  test_lint_invariants.py  test_llm_factory.py  test_llm_utils.py  test_outline_generate.py  test_outline_transition_policy.py  test_output_parsing.py  test_pause_marker.py  test_plan_scene.py  test_prompt_composition.py  test_prompt_hashing.py  test_prompt_registry.py  test_prompt_render.py  test_rate_limiter_shared.py  test_runner_outline_gate.py  test_schema_validation.py  test_state_bag_and_milestones.py  test_state_rollups.py  test_state_summary.py  test_workspace_init.py
(+3322 files in other folders)
