[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookforge"
version = "0.1.0"
description = "CLI book generator with file-based memory."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "BookForge Contributors" }]
dependencies = ["jsonschema>=4.22"]

[project.scripts]
bookforge = "bookforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
